# CudaRayTracer

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: doxygen.yml
docs/: mainpage.dox
examples/: cornell_box.yaml  hdr.yaml  materials.yaml  normal_map.yaml  obj.yaml  orthographic.yaml
src/: aabb.cuh  buffer.cuh  bvh.cuh  camera.cuh  command_parse.cuh  denoise.cuh  hittable.cuh  image.cuh  interval.cuh  main.cu  mat3.cuh  material.cuh  objects.cuh  preview.cuh  ray.cuh  render.cuh  scene.cuh  texture.cuh  utility.cuh  vec2.cuh  vec3.cuh
